--- a/src/main/resources/templates/vehicle/detail.html
+++ b/src/main/resources/templates/vehicle/detail.html
@@ -5,17 +5,19 @@
     <style>
         body { font-family: Arial, sans-serif; margin: 30px; background-color: #f9f9f9; }
         .container { max-width: 700px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-        h2 { text-align: center; color: #009879; }
+        h2 { text-align: center; color: #1aa546; }
         .info-row { display: flex; justify-content: space-between; padding: 8px 0; border-bottom: 1px solid #eee; }
         .buttons { text-align: center; margin-top: 20px; }
-        button { background-color: #009879; color: white; border: none; padding: 10px 20px; border-radius: 6px; margin: 5px; cursor: pointer; }
+        button { background-color: #1aa546; color: white; border: none; padding: 10px 20px; border-radius: 6px; margin: 5px; cursor: pointer; }
         .delete { background-color: #e63946; }
         button:hover { opacity: 0.9; }
     </style>
 </head>
 <body>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
+    <h2>Vehicle Details</h2>
     <div class="container">
-        <h2>Vehicle Details</h2>
+        
         <div class="info-row"><b>ID:</b> <span th:text="${vehicle.id}"></span></div>
         <div class="info-row"><b>Vendor:</b> <span th:text="${vehicle.rentalVendor.name}"></span></div>
         <div class="info-row"><b>Type:</b> <span th:text="${vehicle.type}"></span></div>
@@ -31,12 +33,12 @@
         <div class="info-row"><b>Status:</b> <span th:text="${vehicle.status}"></span></div>
 
         <div class="buttons">
-            <a th:href="@{'/vehicles/update/' + ${vehicle.id}}"><button>Update Vehicle Details</button></a>
-            <a th:href="@{'/vehicles/' + ${vehicle.id} + '/delete'}"
-            onclick="return confirm('Are you sure you want to delete this vehicle?');">
-            <button class="delete">Delete Vehicle</button>
-            </a>
-            <a href="/vehicles"><button>Back</button></a>
+            <form th:action="@{'/vehicles/' + ${vehicle.id} + '/delete'}" method="post" 
+                onsubmit="return confirm('Are you sure you want to delete this vehicle?');">
+                <input type="hidden" name="_method" value="delete" />
+                <button type="submit" class="delete">Delete Vehicle</button>
+                <a href="/vehicles"><button>Back</button></a>
+            </form>
         </div>
     </div>
 </body>
