--- a/src/main/resources/templates/vehicle/detail.html
+++ b/src/main/resources/templates/vehicle/detail.html
@@ -29,16 +29,15 @@
         <div class="info-row"><b>Capacity:</b> <span th:text="${vehicle.capacity}"></span></div>
         <div class="info-row"><b>Transmission:</b> <span th:text="${vehicle.transmission}"></span></div>
         <div class="info-row"><b>Fuel Type:</b> <span th:text="${vehicle.fuelType}"></span></div>
-        <div class="info-row"><b>Price/Day:</b> Rp <span th:text="${vehicle.price}"></span></div>
+        <div class="info-row"><b>Price/Day:</b> Rp <span th:text="${#numbers.formatDecimal(vehicle.price, 0, 'COMMA', 2, 'POINT')}"></span></div>
         <div class="info-row"><b>Status:</b> <span th:text="${vehicle.status}"></span></div>
-
         <div class="buttons">
             <form th:action="@{'/vehicles/' + ${vehicle.id} + '/delete'}" method="post" 
                 onsubmit="return confirm('Are you sure you want to delete this vehicle?');">
                 <input type="hidden" name="_method" value="delete" />
                 <button type="submit" class="delete">Delete Vehicle</button>
-                <a href="/vehicles"><button>Back</button></a>
             </form>
+            <a href="/vehicles"><button>Back</button></a>
         </div>
     </div>
 </body>
